Pint Changelog
==============

0.10 (unreleased)
-----------------

- **BREAKING CHANGE**:
  Implement NEP-18 <https://numpy.org/neps/nep-0018-array-function-protocol.html> for
  Pint Quantities. Most NumPy functions that previously stripped units when applied to
  Pint Quantities will now return Quantities with proper units (on NumPy v1.16 with
  the array_function protocol enabled or v1.17+ by default) instead of ndarrays. Any
  non-explictly-handled functions will now raise a "no implementation found" TypeError
  instead of stripping units. The previous behavior is maintained for NumPy < v1.16 and
  when the array_function protocol is disabled.
  (Issue #905, Thanks Jon Thielen and andrewgsavage)
- Implementation of NumPy ufuncs has been refactored to share common utilities with
  NumPy function implementations
  (Issue #905, Thanks Jon Thielen)
- Pint Quantities now support the `@` matrix mulitiplication operator (on NumPy v1.16+),
  as well as the `dot`, `flatten`, `astype`, and `item` methods.
  (Issue #905, Thanks Jon Thielen)
- **BREAKING CHANGE**:
  Fix crash when applying pprint to large sets of Units.
  DefinitionSyntaxError is now a subclass of SyntaxError (was ValueError).
  DimensionalityError and OffsetUnitCalculusError are now subclasses of TypeError (was
  ValueError).
  (Issue #915, Thanks Guido Imperiale)
- All Exceptions can now be pickled and can be accessed from the top-level package.
  (Issue #915, Thanks Guido Imperiale)
- TODO #913
- TODO #911
- Prevent 1500x slowdown when using .to() with a context
  (Issues #909 and #923, Thanks Guido Imperiale)
- **BREAKING CHANGE**:
  Drop support for Python < 3.6, numpy < 1.14, and uncertainties < 3.0;
  if you still need them, please install pint 0.9.
  Pint now adheres to NEP-29 <https://numpy.org/neps/nep-0029-deprecation_policy.html>
  as a rolling dependencies version policy.
  (Issues #908 and #910, Thanks Guido Imperiale)
- TODO #907
- TODO #891
- TODO #890
- TODO #889
- TODO #888
- TODO #884