@@ -48,13 +48,13 @@ class TestMeasurement(QuantityTestCase):
         #self.assertEqual('{:!r}'.format(m), '<Measurement(4.0-, 0.10, second ** 2)>')
         self.assertEqual('{0:P}'.format(m), '(4.00 ± 0.10) second²')
         self.assertEqual('{0:L}'.format(m), r'\left(4.00 \pm 0.10\right)\ \mathrm{second}^{2}')
-        self.assertEqual('{0:H}'.format(m), '(4.00 &plusmn; 0.10) second<sup>2</sup>')
+        self.assertEqual('{0:H}'.format(m), '(4.00 &plusmn; 0.10) second^2')
         self.assertEqual('{0:C}'.format(m), '(4.00+/-0.10) second**2')
         self.assertEqual('{0:Lx}'.format(m), r'\SI[separate-uncertainty=true]{4.00(10)}{\second\squared}')
         self.assertEqual('{0:.1f}'.format(m), '(4.0 +/- 0.1) second ** 2')
         self.assertEqual('{0:.1fP}'.format(m), '(4.0 ± 0.1) second²')
         self.assertEqual('{0:.1fL}'.format(m), r'\left(4.0 \pm 0.1\right)\ \mathrm{second}^{2}')
-        self.assertEqual('{0:.1fH}'.format(m), '(4.0 &plusmn; 0.1) second<sup>2</sup>')
+        self.assertEqual('{0:.1fH}'.format(m), '(4.0 &plusmn; 0.1) second^2')
         self.assertEqual('{0:.1fC}'.format(m), '(4.0+/-0.1) second**2')
         self.assertEqual('{0:.1fLx}'.format(m), r'\SI[separate-uncertainty=true]{4.0(1)}{\second\squared}')
 
@@ -65,7 +65,7 @@ class TestMeasurement(QuantityTestCase):
         self.assertEqual('{0:.3uS}'.format(m), '0.2000(100) second ** 2')
         self.assertEqual('{0:.3uSP}'.format(m), '0.2000(100) second²')
         self.assertEqual('{0:.3uSL}'.format(m), r'0.2000\left(100\right)\ \mathrm{second}^{2}')
-        self.assertEqual('{0:.3uSH}'.format(m), '0.2000(100) second<sup>2</sup>')
+        self.assertEqual('{0:.3uSH}'.format(m), '0.2000(100) second^2')
         self.assertEqual('{0:.3uSC}'.format(m), '0.2000(100) second**2')
 
     def test_format_u(self):
@@ -74,7 +74,7 @@ class TestMeasurement(QuantityTestCase):
         self.assertEqual('{0:.3u}'.format(m), '(0.2000 +/- 0.0100) second ** 2')
         self.assertEqual('{0:.3uP}'.format(m), '(0.2000 ± 0.0100) second²')
         self.assertEqual('{0:.3uL}'.format(m), r'\left(0.2000 \pm 0.0100\right)\ \mathrm{second}^{2}')
-        self.assertEqual('{0:.3uH}'.format(m), '(0.2000 &plusmn; 0.0100) second<sup>2</sup>')
+        self.assertEqual('{0:.3uH}'.format(m), '(0.2000 &plusmn; 0.0100) second^2')
         self.assertEqual('{0:.3uC}'.format(m), '(0.2000+/-0.0100) second**2')
         self.assertEqual('{0:.3uLx}'.format(m), r'\SI[separate-uncertainty=true]{0.2000(100)}{\second\squared}')
         self.assertEqual('{0:.1uLx}'.format(m), r'\SI[separate-uncertainty=true]{0.20(1)}{\second\squared}')
@@ -86,7 +86,7 @@ class TestMeasurement(QuantityTestCase):
         self.assertEqual('{0:.1u%}'.format(m), '(20 +/- 1)% second ** 2')
         self.assertEqual('{0:.1u%P}'.format(m), '(20 ± 1)% second²')
         self.assertEqual('{0:.1u%L}'.format(m), r'\left(20 \pm 1\right) \%\ \mathrm{second}^{2}')
-        self.assertEqual('{0:.1u%H}'.format(m), '(20 &plusmn; 1)% second<sup>2</sup>')
+        self.assertEqual('{0:.1u%H}'.format(m), '(20 &plusmn; 1)% second^2')
         self.assertEqual('{0:.1u%C}'.format(m), '(20+/-1)% second**2')
 
     def test_format_perce(self):
@@ -95,7 +95,7 @@ class TestMeasurement(QuantityTestCase):
         self.assertEqual('{0:.1ue}'.format(m), '(2.0 +/- 0.1)e-01 second ** 2')
         self.assertEqual('{0:.1ueP}'.format(m), '(2.0 ± 0.1)×10⁻¹ second²')
         self.assertEqual('{0:.1ueL}'.format(m), r'\left(2.0 \pm 0.1\right) \times 10^{-1}\ \mathrm{second}^{2}')
-        self.assertEqual('{0:.1ueH}'.format(m), '(2.0 &plusmn; 0.1)e-01 second<sup>2</sup>')
+        self.assertEqual('{0:.1ueH}'.format(m), '(2.0 &plusmn; 0.1)e-01 second^2')
         self.assertEqual('{0:.1ueC}'.format(m), '(2.0+/-0.1)e-01 second**2')
 
     def test_raise_build(self):
