@@ -114,12 +114,12 @@ class TestQuantity(QuantityTestCase):
                              ('{0:.4f}', '{0:.4f} {1!s}'.format(x.magnitude, x.units)),
                              ('{0:L}', r'4.12345678\ \frac{\mathrm{kilogram} \cdot \mathrm{meter}^{2}}{\mathrm{second}}'),
                              ('{0:P}', '4.12345678 kilogram·meter²/second'),
-                             ('{0:H}', '4.12345678 kilogram meter<sup>2</sup>/second'),
+                             ('{0:H}', '4.12345678 kilogram meter^2/second'),
                              ('{0:C}', '4.12345678 kilogram*meter**2/second'),
                              ('{0:~}', '4.12345678 kg * m ** 2 / s'),
                              ('{0:L~}', r'4.12345678\ \frac{\mathrm{kg} \cdot \mathrm{m}^{2}}{\mathrm{s}}'),
                              ('{0:P~}', '4.12345678 kg·m²/s'),
-                             ('{0:H~}', '4.12345678 kg m<sup>2</sup>/s'),
+                             ('{0:H~}', '4.12345678 kg m^2/s'),
                              ('{0:C~}', '4.12345678 kg*m**2/s'),
                              ('{0:Lx}', r'\SI[]{4.12345678}{\kilo\gram\meter\squared\per\second}'),
                              ):
@@ -167,12 +167,12 @@ class TestQuantity(QuantityTestCase):
         x = ureg.Quantity(4.12345678, UnitsContainer(meter=2, kilogram=1, second=-1))
         for spec, result in (('L', r'4.12345678\ \frac{\mathrm{kilogram} \cdot \mathrm{meter}^{2}}{\mathrm{second}}'),
                              ('P', '4.12345678 kilogram·meter²/second'),
-                             ('H', '4.12345678 kilogram meter<sup>2</sup>/second'),
+                             ('H', '4.12345678 kilogram meter^2/second'),
                              ('C', '4.12345678 kilogram*meter**2/second'),
                              ('~', '4.12345678 kg * m ** 2 / s'),
                              ('L~', r'4.12345678\ \frac{\mathrm{kg} \cdot \mathrm{m}^{2}}{\mathrm{s}}'),
                              ('P~', '4.12345678 kg·m²/s'),
-                             ('H~', '4.12345678 kg m<sup>2</sup>/s'),
+                             ('H~', '4.12345678 kg m^2/s'),
                              ('C~', '4.12345678 kg*m**2/s'),
                              ):
             ureg.default_format = spec
@@ -205,14 +205,14 @@ class TestQuantity(QuantityTestCase):
         ureg = UnitRegistry()
         x = 3.5 * ureg.Unit(UnitsContainer(meter=2, kilogram=1, second=-1))
         self.assertEqual(x._repr_html_(),
-                         "3.5 kilogram meter<sup>2</sup>/second")
+                         "3.5 kilogram meter^2/second")
         self.assertEqual(x._repr_latex_(),
                          r'$3.5\ \frac{\mathrm{kilogram} \cdot '
                          r'\mathrm{meter}^{2}}{\mathrm{second}}$')
         x._repr_pretty_(Pretty, False)
         self.assertEqual("".join(alltext), "3.5 kilogram·meter²/second")
         ureg.default_format = "~"
-        self.assertEqual(x._repr_html_(), "3.5 kg m<sup>2</sup>/s")
+        self.assertEqual(x._repr_html_(), "3.5 kg m^2/s")
         self.assertEqual(x._repr_latex_(),
                          r'$3.5\ \frac{\mathrm{kg} \cdot '
                          r'\mathrm{m}^{2}}{\mathrm{s}}$')
